--- a/backend/api/templates/searchResult.html
+++ b/backend/api/templates/searchResult.html
@@ -40,19 +40,13 @@
           aria-labelledby="heading{{ wedding.matieccuoi }}"
           data-parent="#accordion"
         >
-          <form class="wedding_info">
+          <form
+            class="wedding_info"
+            method="POST"
+            action="{% url 'update_wedding_info' wedding.matieccuoi %}"
+          >
+            {% csrf_token %}
             <div class="row">
-              <div class="col mb-3">
-                <label for="matieccuoi" class="form-label">Mã tiệc cưới:</label>
-                <input
-                  type="text"
-                  class="form-control"
-                  id="matieccuoi"
-                  name="matieccuoi_disable"
-                  value="{{ wedding.matieccuoi }}"
-                  disabled
-                />
-              </div>
               <div class="col mb-3">
                 <label for="tencodau" class="form-label">Tên cô dâu:</label>
                 <input
@@ -76,11 +70,44 @@
                 />
               </div>
               <div class="col mb-3">
+                <label for="maca" class="form-label">Ca</label>
+                <select
+                  class="form-select"
+                  name="maca"
+                  id="maca"
+                  aria-label="Default select example"
+                  disabled
+                >
+                  <option value="{{ wedding.maca }}" selected>{{ wedding.tenca }}</option>
+                  {% for ca in shifts %}
+          
+                  <option value="{{ ca.maca }}" {% if ca.maca == wedding.maca %} selected {% endif %}>{{ ca.tenca }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              <div class="col mb-3">
+                <label for="masanh" class="form-label">Sảnh</label>
+                <select
+                  class="form-select"
+                  name="masanh"
+                  id="masanh"
+                  aria-label="Default select example"
+                  disabled
+                  
+                >
+                
+                  {% for sanh in lobbies %}
+                  <option value="{{ sanh.masanh }}" {% if sanh.masanh == wedding.masanh %} selected {% endif %}>{{ sanh.tensanh }}</option>
+                  {% endfor %}
+                </select>
+              </div>
+              
+              <div class="col mb-3">
                 <label for="ngaydaitiec" class="form-label"
                   >Ngày đãi tiệc:</label
                 >
                 <input
-                  type="text"
+                  type="date"
                   class="form-control"
                   id="ngaydaitiec"
                   name="ngaydaitiec"
@@ -97,6 +124,16 @@
                   >
                     Chỉnh sửa
                   </button>
+
+                  <button
+                    type="button"
+                    class="btn btn-outline-secondary"
+                    id="saveButton"
+                    style="display: none"
+                  >
+                    Lưu
+                  </button>
+
                   <button
                     type="button"
                     class="btn btn-outline-secondary"
@@ -118,6 +155,7 @@
                   <th>Tên món ăn</th>
                   <th>Số lượng</th>
                   <th>Đơn giá</th>
+                  <th>Ghi chú</th>
                   <th>Thành tiền</th>
                 </tr>
               </thead>
@@ -125,9 +163,16 @@
                 {% for food in wedding.danhsachmonan %}
                 <tr>
                   <td>{{ forloop.counter }}</td>
-                  <td id="chitiet_mamonan">{{ food.mamonan }}</td>
+                  <td>
+                    {% for food_item in foods %} {% if food_item.mamonan == food.mamonan %}
+                    {{ food_item.tenmonan }} 
+                    {% endif %} 
+                    {%  endfor %}
+                  </td>
+
                   <td>{{ food.soluong }}</td>
                   <td>{{ food.dongiamonan|floatformat|intcomma }}</td>
+                  <td>{{ food.ghichu }}</td>
                   <td>
                     {{ food.dongiamonan|floatformat|mul:food.soluong|intcomma }}
                   </td>
@@ -135,7 +180,14 @@
                 {% endfor %}
               </tbody>
             </table>
-            <button type="button" id="modal-add-food"class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal" data-wedding-id="{{ wedding.matieccuoi }}"   >
+            <button
+              type="button"
+              id="modal-add-food"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#myModal"
+              data-wedding-id="{{ wedding.matieccuoi }}"
+            >
               Thêm món ăn
             </button>
           </div>
@@ -155,7 +207,13 @@
                 {% for service in wedding.danhsachdichvu %}
                 <tr>
                   <td>{{ forloop.counter }}</td>
-                  <td id="chitiet_madichvu">{{ service.madichvu }}</td>
+                  <td>
+                    {% for service_item in services %} 
+                    {% if service_item.madichvu == service.madichvu %} 
+                    {{service_item.tendichvu }} 
+                    {% endif %} 
+                    {% endfor %}
+                  </td>
                   <td>{{ service.soluong }}</td>
                   <td>{{ service.dongiadichvu|intcomma }}</td>
                   <td>
@@ -165,7 +223,14 @@
                 {% endfor %}
               </tbody>
             </table>
-            <button type="button" id="modal-add-service"class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModalService" >
+            <button
+              type="button"
+              id="modal-add-service"
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#myModalService"
+              data-wedding-id="{{ wedding.matieccuoi }}"
+            >
               Thêm dịch vụ
             </button>
           </div>
@@ -176,148 +241,19 @@
   </tbody>
 </table>
 <div class="modal" id="myModal">
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" style="min-width: 800px;">
-    <div class="modal-content" >
-      <div class="modal-body">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Tên món ăn</th>
-              <th scope="col">Loại món ăn</th>
-              <th scope="col">Đơn giá</th>
-              <th scope="col">Ghi chú</th>
-              <th scope="col">Select</th>
-            </tr>
-          </thead>
-          <tbody>
-            
-            {% for food in foods %}
-            
-            <tr class="foodRow" data-loaimonan="{{ food.maloaimonan }}">
-              <th scope="row">{{ forloop.counter }}</th>
-              <td>{{ food.tenmonan }}</td>
-              <td>{{ food.maloaimonan}}</td>
-              <td>{{ food.dongia |floatformat|intcomma}}</td>
-              <td>{{ food.ghichu }}</td>
-              <td id="addFood">
-                <input
-                  type="checkbox"
-                  name="selected_foods"
-                  value="{{ food.mamonan }}"
-                  
-                  {% for wed_food in wedding.danhsachmonan %}
-                    {% if wed_food.mamonan == food.mamonan %} checked {% endif %}
-                  {% endfor %}
-                />
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
+  <div
+    class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+    style="min-width: 800px"
+  >
+    <div id="foodDetailTable" class="modal-content"></div>
   </div>
 </div>
-<div class="modal" id="myModalService" >
-  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" style="min-width: 800px;">
-    <div class="modal-content" >
-      <div class="modal-body">
-        <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">#</th>
-              <th scope="col">Tên dịch vụ </th>
-              <th scope="col">Loại dịch vụ </th>
-              <th scope="col">Đơn giá</th>
-              <th scope="col">Ghi chú</th>
-              <th scope="col">Select</th>
-            </tr>
-          </thead>
-          <tbody>
-            
-            {% for service in services %}
-            
-            <tr class="foodRow" data-loaimonan="{{ service.madichvu }}">
-              <th scope="row">{{ forloop.counter }}</th>
-              <td>{{ service.tendichvu }}</td>
-              <td>{{ service.madichvu}}</td>
-              <td>{{ service.dongia |floatformat|intcomma}}</td>
-              <td>{{ service.ghichu }}</td>
-              <td id="addService">
-                <input
-                  type="checkbox"
-                  name="selected_services"
-                  value="{{ service.madichvu }}"
-                />
-              </td>
-            </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
 
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
-      </div>
-
-    </div>
+<div class="modal" id="myModalService">
+  <div
+    class="modal-dialog modal-dialog-centered modal-dialog-scrollable"
+    style="min-width: 800px"
+  >
+    <div id="serviceDetailTable" class="modal-content"></div>
   </div>
 </div>
-<script>
-
-   function readFoodServiceDetailChecked(wedding_id){
-console.log("ma tiec cuoi :",wedding_id)
-  }
-window.onload = function() {
-  console.log("first page loaded");
-
-  // Retrieve all edit and save buttons using class selectors
-  const editButtons = document.querySelectorAll("#editButton");
-  const saveButtons = document.querySelectorAll("#saveButton");
-
-  // Function to enable form fields for editing
-  function enableEditing(button) {
-    const formFields = button.closest(".wedding_info").querySelectorAll("input[type='text']");
-    
-    formFields.forEach(function(inputField) {
-      inputField.disabled = false;
-    });
-
-    button.style.display = "none";
-    button.nextElementSibling.style.display = "block";
-  }
-
-  // Function to disable form fields after editing
-  function disableEditing(button) {
-    const formFields = button.closest(".wedding_info").querySelectorAll("input[type='text']");
-    
-    formFields.forEach(function(inputField) {
-      inputField.disabled = true;
-    });
-
-    button.style.display = "none";
-    button.previousElementSibling.style.display = "block";
-  }
-
-  editButtons.forEach(function(editButton) {
-    editButton.addEventListener("click", function() {
-      enableEditing(this);
-    });
-  });
-
-  saveButtons.forEach(function(saveButton) {
-    saveButton.addEventListener("click", function() {
-      disableEditing(this);
-    });
-  });
-};
-
-</script>
