[ADD] login and logout

--- a/backend/api/templates/layout.html
+++ b/backend/api/templates/layout.html
@@ -118,6 +118,7 @@
                 <a href="/report/">Thống kê</a>
                 <a href="#">Nhân viên</a>
                 <a href="#">Tài khoản</a>
+                <a href="/logout/"><button>Đăng xuất</button></a>
                 
            
         </nav>
