--- a/backend/api/templates/layout.html
+++ b/backend/api/templates/layout.html
@@ -10,11 +10,12 @@
     <style>
          body {
             font-family: Arial, sans-serif;
+            overflow: hidden;
         }
 
         .sidebar {
             height: 100vh;
-            width: 220px;
+            width: 180px;
            
             background-color: #f8f9fa;
             padding-top: 20px;
