--- a/backend/api/templates/search.html
+++ b/backend/api/templates/search.html
@@ -1,6 +1,13 @@
 {% extends 'layout.html' %} {% block title %} {% endblock %} {% block content %}
 {% load mathfilters %} {% load humanize %} {% csrf_token %}
-<form
+<style>
+  #searchResult{
+    height: 100vh;
+    overflow: scroll;
+  }
+</style>
+<div class="search-container">
+  <form
   className="form-columns"
   id="searchWedding"
   action="{% url 'search_party' %}"
@@ -101,6 +108,8 @@
 </form>
 
 <div class="mt-3" id="searchResult"></div>
+
+</div>
 
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
